--- a/Movideo/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/Movideo/en.lproj/MainStoryboard_iPhone.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="12E55" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="2">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="12E55" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="2">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="2083"/>
     </dependencies>
@@ -9,14 +9,14 @@
             <objects>
                 <viewController id="2" customClass="MasterViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="3">
-                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <collectionView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" indicatorStyle="white" minimumZoomScale="0.0" maximumZoomScale="0.0" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="YyA-aO-iEL">
+                            <collectionView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" verticalHuggingPriority="1" verticalCompressionResistancePriority="1000" indicatorStyle="white" minimumZoomScale="0.0" maximumZoomScale="0.0" dataMode="prototypes" id="YyA-aO-iEL">
+                                <rect key="frame" x="0.0" y="78" width="320" height="382"/>
+                                <autoresizingMask key="autoresizingMask" heightSizable="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.72156864404678345" green="0.88235300779342651" blue="0.9490196704864502" alpha="1" colorSpace="deviceRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="465" id="Qzp-JU-7Pp"/>
-                                </constraints>
+                                <inset key="scrollIndicatorInsets" minX="1" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="lA9-Sc-PNm">
                                     <size key="itemSize" width="320" height="177"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -24,49 +24,32 @@
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="mediaCollectionViewCell" id="BNC-RH-03R" customClass="MediaCollectionViewCell">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" verticalHuggingPriority="237" verticalCompressionResistancePriority="754" reuseIdentifier="mediaCollectionViewCell" id="BNC-RH-03R" customClass="MediaCollectionViewCell">
                                         <rect key="frame" x="0.0" y="0.0" width="320" height="177"/>
-                                        <autoresizingMask key="autoresizingMask"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                             <rect key="frame" x="0.0" y="0.0" width="320" height="177"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="x2z-RU-dhg">
-                                                    <constraints>
-                                                        <constraint firstAttribute="width" constant="303" id="6Ud-1b-z7n"/>
-                                                        <constraint firstAttribute="height" constant="170" id="v4x-Rb-dK4"/>
-                                                    </constraints>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" id="x2z-RU-dhg">
+                                                    <rect key="frame" x="7" y="6" width="303" height="170"/>
                                                 </imageView>
-                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gEH-Bi-EpY">
+                                                <view contentMode="scaleToFill" id="gEH-Bi-EpY">
+                                                    <rect key="frame" x="12" y="144" width="291" height="27"/>
                                                     <subviews>
-                                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="7" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2ai-jE-6ii">
-                                                            <constraints>
-                                                                <constraint firstAttribute="width" constant="268" id="HB4-UT-ma6"/>
-                                                            </constraints>
+                                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="7" adjustsLetterSpacingToFitWidth="YES" id="2ai-jE-6ii">
+                                                            <rect key="frame" x="6" y="0.0" width="268" height="27"/>
                                                             <fontDescription key="fontDescription" name="TrebuchetMS-Bold" family="Trebuchet MS" pointSize="13"/>
                                                             <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                     </subviews>
                                                     <color key="backgroundColor" red="0.20000000300000001" green="0.20000000300000001" blue="0.20000000300000001" alpha="0.52000000000000002" colorSpace="calibratedRGB"/>
-                                                    <constraints>
-                                                        <constraint firstItem="2ai-jE-6ii" firstAttribute="leading" secondItem="gEH-Bi-EpY" secondAttribute="leading" constant="6" id="Vb9-3V-ekf"/>
-                                                        <constraint firstItem="2ai-jE-6ii" firstAttribute="top" secondItem="gEH-Bi-EpY" secondAttribute="top" type="default" id="cje-yP-7wb"/>
-                                                        <constraint firstItem="2ai-jE-6ii" firstAttribute="bottom" secondItem="gEH-Bi-EpY" secondAttribute="bottom" type="default" id="myN-Io-ACW"/>
-                                                    </constraints>
                                                 </view>
                                             </subviews>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         </view>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                        <constraints>
-                                            <constraint firstAttribute="trailing" secondItem="gEH-Bi-EpY" secondAttribute="trailing" constant="17" id="8ca-UO-RMf"/>
-                                            <constraint firstItem="gEH-Bi-EpY" firstAttribute="leading" secondItem="BNC-RH-03R" secondAttribute="leading" constant="12" id="MhC-kl-2FD"/>
-                                            <constraint firstItem="x2z-RU-dhg" firstAttribute="top" secondItem="BNC-RH-03R" secondAttribute="top" constant="6" id="QGE-H0-gtI"/>
-                                            <constraint firstAttribute="bottom" secondItem="gEH-Bi-EpY" secondAttribute="bottom" constant="6" id="ckm-tl-rdf"/>
-                                            <constraint firstItem="gEH-Bi-EpY" firstAttribute="top" secondItem="BNC-RH-03R" secondAttribute="top" constant="144" id="g5i-Jz-nES"/>
-                                            <constraint firstItem="x2z-RU-dhg" firstAttribute="leading" secondItem="BNC-RH-03R" secondAttribute="leading" constant="7" id="jjS-Us-8Ez"/>
-                                        </constraints>
                                         <connections>
                                             <outlet property="mediaImage" destination="x2z-RU-dhg" id="nTe-QJ-3hc"/>
                                             <outlet property="mediaTitle" destination="2ai-jE-6ii" id="9Be-Qf-Xkm"/>
@@ -74,18 +57,20 @@
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="movideo-logo.png" translatesAutoresizingMaskIntoConstraints="NO" id="DBJ-mA-Ta2">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="50" image="movideo-logo.png" id="DBJ-mA-Ta2">
+                                <rect key="frame" x="99" y="8" width="122" height="22"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="122" id="BJp-FG-VZG"/>
-                                    <constraint firstAttribute="height" constant="22" id="pv0-RW-pxj"/>
-                                </constraints>
                             </imageView>
-                            <searchBar contentMode="redraw" barStyle="blackTranslucent" placeholder="Search video" showsCancelButton="YES" translatesAutoresizingMaskIntoConstraints="NO" id="flU-r3-4nl">
+                            <searchBar contentMode="redraw" verticalHuggingPriority="38" verticalCompressionResistancePriority="1000" barStyle="blackTranslucent" placeholder="Search video" showsCancelButton="YES" id="flU-r3-4nl">
+                                <rect key="frame" x="0.0" y="34.5" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxY="YES"/>
                                 <color key="tintColor" red="0.67058825492858887" green="0.82352948188781738" blue="0.36862745881080627" alpha="1" colorSpace="deviceRGB"/>
                                 <textInputTraits key="textInputTraits" autocorrectionType="no"/>
                             </searchBar>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="22X-MW-F85">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="22X-MW-F85">
+                                <rect key="frame" x="12" y="8" width="22" height="22"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <state key="normal" image="53-house.png">
                                     <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
@@ -100,18 +85,6 @@
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="0.97254908080000002" green="0.78431379800000001" blue="0.18823531269999999" alpha="1" colorSpace="deviceRGB"/>
-                        <constraints>
-                            <constraint firstItem="22X-MW-F85" firstAttribute="top" secondItem="3" secondAttribute="top" constant="8" id="0TQ-Ht-6Fa"/>
-                            <constraint firstItem="flU-r3-4nl" firstAttribute="leading" secondItem="3" secondAttribute="leading" type="default" id="6oH-cY-Z9k"/>
-                            <constraint firstItem="YyA-aO-iEL" firstAttribute="leading" secondItem="3" secondAttribute="leading" type="default" id="7sY-Ye-9il"/>
-                            <constraint firstItem="DBJ-mA-Ta2" firstAttribute="top" secondItem="22X-MW-F85" secondAttribute="top" type="default" id="9hb-C9-6Pn"/>
-                            <constraint firstItem="flU-r3-4nl" firstAttribute="trailing" secondItem="3" secondAttribute="trailing" type="default" id="BZk-zL-mEW"/>
-                            <constraint firstItem="YyA-aO-iEL" firstAttribute="bottom" secondItem="3" secondAttribute="bottom" type="default" id="JEL-NH-OBw"/>
-                            <constraint firstItem="flU-r3-4nl" firstAttribute="bottom" secondItem="YyA-aO-iEL" secondAttribute="top" type="default" id="ZQq-TJ-hHJ"/>
-                            <constraint firstItem="YyA-aO-iEL" firstAttribute="trailing" secondItem="3" secondAttribute="trailing" type="default" id="cHk-0P-sfB"/>
-                            <constraint firstItem="DBJ-mA-Ta2" firstAttribute="centerX" secondItem="flU-r3-4nl" secondAttribute="centerX" type="default" id="d4K-Ao-nex"/>
-                            <constraint firstItem="22X-MW-F85" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="12" id="mcC-Nk-oIc"/>
-                        </constraints>
                     </view>
                     <connections>
                         <outlet property="collectionView" destination="YyA-aO-iEL" id="UE7-TU-wcu"/>
@@ -141,9 +114,6 @@
                 <relationship kind="outlet" name="mediaTitle" candidateClass="UILabel"/>
             </relationships>
         </class>
-        <class className="NSLayoutConstraint" superclassName="NSObject">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
-        </class>
         <class className="UICollectionReusableView" superclassName="UIView">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/UICollectionReusableView.h"/>
         </class>
@@ -160,6 +130,6 @@
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
-        <simulatedScreenMetrics key="destination" type="retina4"/>
+        <simulatedScreenMetrics key="destination"/>
     </simulatedMetricsContainer>
 </document>
